prm-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pulceo-resource-manager

spec:
  rules:
    - http:
        paths:
          - path: /api/v1/nodes
            pathType: Prefix
            backend:
              service:
                name:  pulceo-resource-manager
                port:
                  number: 7878
          - path: /api/v1/links
            pathType: Prefix
            backend:
              service:
                name: pulceo-resource-manager
                port:
                  number: 7878
          - path: /api/v1/providers
            pathType: Prefix
            backend:
              service:
                name: pulceo-resource-manager
                port:
                  number: 7878
          - path: /api/v1/resources
            pathType: Prefix
            backend:
              service:
                name: pulceo-resource-manager
                port:
                  number: 7878
          - path: /prm/health
            pathType: Exact
            backend:
              service:
                name: pulceo-resource-manager
                port:
                  number: 7878

---
apiVersion: v1
kind: Service
metadata:
  name: pulceo-resource-manager

spec:
  ports:
    - protocol: TCP
      name: web
      port: 7878
  selector:
    app: pulceo-resource-manager

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulceo-resource-manager
  labels:
    app: pulceo-resource-manager

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulceo-resource-manager
  template:
    metadata:
      labels:
        app: pulceo-resource-manager
    spec:
      containers:
        - name: pulceo-resource-manager
          image: ghcr.io/spboehm/pulceo-resource-manager:main
          imagePullPolicy: Always
          ports:
            - containerPort: 7878
              name: web
